# market-data-platform

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: market-universe-refresh.yml  relative-volume-pipeline.yml
config/: symbols.txt  symbols_10.txt  symbols_forex_major.txt  symbols_intraday_eligible.txt
configs/scanners/: rs_scanner.json  rs_scanner_us_expanded.json
configs/strategies/: daily_pullback_rvol.json
configs/vscode/: preferences.json
data/serving/: relative_volume_master.parquet
docs/: STRUCTURE.md
docs/databento/: L3_Workflow_Concise.odt  databento_data_pipeline.ods  databento_summary.odt  es_mbo_weekly_workflow.txt
docs/research/: DATA_SOURCE_MAP.md  STRATEGY_STATUS.md  script_inventory.csv
docs/workflows/: ninjatrader-data-flow.md  rs-data-flow.md
make/: rs.mk
nt8/: Level2Recorder.cs  TickRecorder.cs
scripts/: import_ninjatrader_csv_wsl.sh  inspect_parquet_polars.py  run_daily_eod_from_rs_config.py  run_rs_scanner_demo.py
scripts/research/: databento_futures_mbo_quote_1m_sessionize.py
scripts/rs/: build_rs_serving.py  get_rs_data.py  run_rs_scanner_demo.py  validate_rs_data_coverage.py  validate_rs_serving_coverage.py  view_rs_serving.py
scripts/stocks/: add_first15_opening_rvol_for_date.py  add_float_to_past_week_ranked_signals.py  add_today_scanner_risk_labels.py  add_today_validated_setup_labels.py  analyze_10y_cheap_directional_setups_fullsample.py  analyze_10y_cheap_long_entry_variants.py  analyze_10y_cheap_long_portfolio_curve.py  analyze_10y_cheap_long_portfolio_frequency.py  (+95 more)
src/: main.py
(+142 files in other folders)
